# wallpaper-smtc-music

./: .gitattributes  .gitignore  LICENSE  PRIVACY.md  README.md  SECURITY.md  THIRD_PARTY.md  index.html  package.json  project.json
assets/: manifest.json
bridge/: README.md
bridge/rust-smtc/: Cargo.toml  README.md  build.rs
bridge/rust-smtc/src/: http.rs  lyrics.rs  main.rs  service.rs  single_instance.rs  smtc.rs  state.rs  status_window.rs  tray.rs
config/: lyrics-api-rules.json  lyrics-providers.json  settings.schema.json
docs/: README.md  bridge-lifecycle.md  configuration.md  development.md  rust-smtc-poc.md  user-guide.md  worklist.md  workshop-readme.md
scripts/: package-release.ps1
tests/: artworkDom.test.mjs  artworkSource.test.mjs  backgroundState.test.mjs  bridgeCapabilities.test.mjs  bridgeClient.test.mjs  bridgePolling.test.mjs  bridgeRefreshSelection.test.mjs  bridgeSourceSelection.test.mjs  bridgeSourceSwitch.test.mjs  commandRefreshSchedule.test.mjs  commandSource.test.mjs  configSchema.test.mjs  displayMode.test.mjs  initialMediaInput.test.mjs  lyricApiRules.test.mjs  lyricLoadingState.test.mjs  lyricRequestState.test.mjs  lyricVisualState.test.mjs  lyricsClock.test.mjs  lyricsCss.test.mjs  lyricsParser.test.mjs  lyricsProvider.test.mjs  lyricsRender.test.mjs  mainArchitecture.test.mjs  mediaCommandRouter.test.mjs  mediaRenderKey.test.mjs  mediaSnapshot.test.mjs  mediaTimelineClock.test.mjs  nowPlayingStore.test.mjs  officialMediaAdapter.test.mjs  openSourceReadiness.test.mjs  optimisticPlayback.test.mjs  packageRelease.test.mjs  (+12 more)
(+48 files in other folders)
