[package]
name = "wallpaper-music-bridge"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/p0etrryw1ne/wallpaper-smtc-music"

[build-dependencies]
winresource = "0.1"

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
ureq = { version = "2", features = ["json"] }
urlencoding = "2"
windows = { version = "0.62", features = [
  "Foundation",
  "Media_Control",
  "Storage_Streams",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_System_LibraryLoader",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_UI_Controls",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
] }
